# django-sqlitetrigger

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
example/example/: admin.py  models.py  settings.py
example/example/migrations/: 0001_initial.py  0002_book_sheets_update.py  0003_alter_book_title.py  0004_remove_book_sheets_update_book_sheets_update.py
sqlitetrigger/: __init__.py  apps.py  conditions.py  contrib.py  core.py  installation.py  migrations.py  registry.py
sqlitetrigger/management/commands/: sqlitetrigger.py
tests/: models.py  settings.py  test_commands.py  test_conditions.py  test_contrib.py  test_core.py  test_migrations.py  test_registry.py
