[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-sqlitetrigger"
version = "0.1.0"
description = "SQLite trigger support integrated with Django models."
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-django>=4.11",
    "django-dynamic-fixture>=4.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["sqlitetrigger"]

[tool.ruff]
lint.select = ["E", "F", "B", "I", "G", "C4"]
line-length = 99
target-version = "py314"
