[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-sqlitetrigger"
version = "0.1.1"
description = "SQLite trigger support integrated with Django models."
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
requires-python = ">=3.14"
dependencies = [
    "django>=6.0",
]
keywords = ["django", "sqlite", "triggers"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Framework :: Django",
    "Framework :: Django :: 6.0",
]

[project.urls]
Homepage = "https://github.com/vtbassmatt/django-sqlitetrigger"
Issues = "https://github.com/vtbassmatt/django-sqlitetrigger/issues"
Repository = "https://github.com/vtbassmatt/django-sqlitetrigger.git"

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-django>=4.11",
    "django-dynamic-fixture>=4.0",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
testpaths = ["tests"]
addopts = "--cov=sqlitetrigger"

[tool.hatch.build.targets.wheel]
packages = ["sqlitetrigger"]

[tool.ruff]
lint.select = ["E", "F", "B", "I", "G", "C4"]
line-length = 99
target-version = "py314"
